Not released yet
----

- #474: Start using setuptools_scm for tag based versioning.
- #506: With `-a`: do not show additional environments header if there are none

2.7.0
-----

- #p450: Stop after the first installdeps and first testenv create hooks
  succeed. This changes the default behaviour of `tox_testenv_create`
  and `tox_testenv_install_deps` to not execute other registered hooks when
  the first hook returns a result that is not `None`.
  Thanks Anthony Sottile (@asottile).

- #271 and #464: Improve environment information for users.

  New command line parameter: `-a` show **all** defined environments -
  not just the ones defined in (or generated from) envlist.

  New verbosity settings for `-l` and `-a`: show user defined descriptions
  of the environments. This also works for generated environments from factors
  by concatenating factor descriptions into a complete description.

  Note that for backwards compatibility with scripts using the output of `-l`
  it's output remains unchanged.

  Thanks Gábor Bernát (@gaborbernat).

- #464: Fix incorrect egg-info location for modified package_dir in setup.py.
  Thanks Selim Belhaouane (@selimb).

- #431: Add 'LANGUAGE' to default passed environment variables.
  Thanks Paweł Adamczak (@pawalad).

- #455: Add a Vagrantfile with a customized Arch Linux box for local testing.
  Thanks Oliver Bestwalter (@obestwalter).

- #454: Revert #407, empty commands is not treated as an error.
  Thanks Anthony Sottile (@asottile).

- #446: (infrastructure) Travis CI tests for tox now also run on OS X now.
  Thanks Jason R. Coombs (@jaraco).

2.6.0
-----

- add "alwayscopy" config option to instruct virtualenv to always copy
  files instead of symlinking. Thanks Igor Duarte Cardoso (@igordcard).

- pass setenv variables to setup.py during a usedevelop install.
  Thanks Eli Collins (@eli-collins).

- replace all references to testrun.org with readthedocs ones.
  Thanks Oliver Bestwalter (@obestwalter).
